--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,3 +1,37 @@
+form {
+    margin-top: 150px;
+	}	
+
+	label {
+		color: violet;
+		font-weight: bold;
+		font-size: 15px;
+		margin-right: 15px;
+	}
+
+	input{
+		padding: 10px;
+		border-radius: 5px;
+	}
+
+	button{
+		background-color: pink;
+		color: purple;
+		border: 0px;
+		border-radius: 5px;
+		font-weight: bold;
+		font-size: 15px;
+		padding: 10px;
+		margin: 25px 0px 25p 0px;
+		cursor: pointer;
+	}
+
+	p {
+		color: white;
+	}
+
+
+
 .warning {
     border: solid red 1px;
     border-radius: .2em;
