--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url('./assets/rick-and-morty-wallpaper.jpg');
-  background-size: cover;
+  background-attachment: fixed;
   background-position: center;
 }
 
